--- a/web/themes/custom/nrgi/assets/src/scss/components/header.scss
+++ b/web/themes/custom/nrgi/assets/src/scss/components/header.scss
@@ -1,6 +1,8 @@
 /** @define c-header */
 .c-header {
   $c            : &;
+
+  @include z-index(header);
   background    : linear-gradient(180deg, rgba($black, 30%) 0%, rgba($black, 0%) 93.27%);
   border-bottom : 1px solid rgba($grey-light, 0.5);
   box-sizing    : border-box;
@@ -23,8 +25,8 @@
     }
   }
 
-  /* #Logo
-================================================== */
+  /* Logo
+  ================================================== */
   &__logo-wrapper {
     font-size   : 0;
     grid-column : 1 / 7;
@@ -55,8 +57,8 @@
     }
   }
 
-  /* #Secondary-menu
-================================================== */
+  /* Secondary-menu
+  ================================================== */
   &__secondary-menu {
     grid-column : 7 / -1;
 
@@ -65,8 +67,8 @@
     }
   }
 
-  /* #Main menu
-================================================== */
+  /* Main menu
+  ================================================== */
   &__main-menu {
     grid-column : 1 / 10;
 
@@ -75,8 +77,8 @@
     }
   }
 
-  /* #Secondary-menu and main menu shared styles
-================================================== */
+  /* Secondary-menu and main menu shared styles
+  ================================================== */
   &__secondary-menu,
   &__main-menu {
     @include media("<=desktop") {
@@ -91,8 +93,8 @@
     }
   }
 
-  /* #Search
-================================================== */
+  /* Search
+  ================================================== */
   &__search {
     align-self  : center;
     grid-column : 10 / -1;
@@ -153,8 +155,8 @@
     display : none;
   }
 
-  /* #Burger button
-================================================== */
+  /* Burger button
+  ================================================== */
   &__burger-button {
     cursor     : pointer;
     display    : none;
@@ -193,8 +195,8 @@
     display : none;
   }
 
-  /* #Mobile menu
-================================================== */
+  /* Mobile menu
+  ================================================== */
   /* stylelint-disable-next-line */
   &.has-menu-overlay,
   &.has-search-overlay {
